--- a/biography-page-challenge/style.css
+++ b/biography-page-challenge/style.css
@@ -16,3 +16,15 @@ ul {
   padding: 30px;
   border-radius: 20px;
 }
+
+h1 {
+  color: darkslategray;
+  font-size: 2rem;
+  border-bottom: 10px dotted purple;
+  padding-bottom: 0.5rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-style: italic;
+}
