Add link icon CSS

--- a/typesetting-homepage-challenge/style.css
+++ b/typesetting-homepage-challenge/style.css
@@ -80,3 +80,9 @@ a:focus {
   text-decoration: none;
   outline: none;
 }
+
+a[href*="http"] {
+  padding-right: 16px;
+  background: url("external-link-52.png") no-repeat right center;
+  background-size: 14px 14px;
+}
