--- a/layout-challenge/style.css
+++ b/layout-challenge/style.css
@@ -30,12 +30,17 @@ img {
 nav {
   background-color: black;
   padding: 0.5em;
+  position: sticky;
+  top: 0;
 }
 
 nav ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1em;
 }
 
 nav a {
