--- a/assessment-files/style.css
+++ b/assessment-files/style.css
@@ -18,42 +18,45 @@ body {
 
 /* || typography */
 
-font[size="7"], font[size="6"], font[size="5"] {
-  font-family: 'Sonsie One', cursive;
-  color: #2a2a2a;
-}
-
-p, input, li, table, label {
+input, li, table, label {
   font-family: 'Open Sans Condensed', sans-serif;
   color: #2a2a2a;
 }
 
-font[size="7"] {
+article p, .secondary p {
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #2a2a2a;
+  font-size: 2.8rem;
+  line-height: 2;
+}
+
+p {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 2.8rem;
+  line-height: 2;
+}
+
+h1 {
+  font-family: 'Sonsie One', cursive;
   font-size: 4rem;
   text-align: center;
   color: white;
   text-shadow: 2px 2px 10px black;
 }
 
-font[size="6"] {
+h2 {
+  font-family: 'Sonsie One', cursive;
   font-size: 3rem;
   text-align: center;
 }
 
-font[size="5"] {
+h3 {
+  font-family: 'Sonsie One', cursive;
   font-size: 2.2rem;
 }
 
-p, li, table {
-  font-size: 1.6rem;
-  line-height: 1.5;
-}
 
 /* || header layout */
-
-div[class="nav"], article, footer, .secondary {
-  background-color: #ffffff;
-}
 
 article, footer, .secondary {
   padding: 10px 30px;
@@ -63,28 +66,31 @@ article {
   margin-right: 10px;
 }
 
-div[class="nav"] {
+nav, article, footer, .secondary {
+  background-color: #ffffff;
+}
+
+nav {
   height: 50px;
-  background-color: #e3e3f5;
   display: flex;
   padding: 1% 0;
   margin-bottom: 10px;
 }
 
-div[class="nav"] ul {
+nav ul {
   padding: 0;
   list-style-type: none;
   flex: 2;
   display: flex;
 }
 
-div[class="nav"] li {
+nav li {
   display: inline;
   text-align: center;
   flex: 1;
 }
 
-div[class="nav"] a {
+nav a {
   display: inline-block;
   font-size: 2rem;
   text-transform: uppercase;
@@ -92,7 +98,7 @@ div[class="nav"] a {
   color: black;
 }
 
-div[class="nav"] .search {
+nav .search {
   flex: 1;
   display: flex;
   align-items: center;
